Fix title overflow on mobile browsers

--- a/css/style.sass
+++ b/css/style.sass
@@ -34,6 +34,7 @@ body
 
 .light-box
   max-width: 400px
+  min-width: 198px
   background: #FEFEFE
   border: 1px solid #EEE
   margin: 0px auto
@@ -120,6 +121,13 @@ footer
   body
     padding-left: 20px
     padding-right: 20px
+
+  section#section-jumbo
+    #jumbo
+      h1
+        font-size: 48px
+        line-height: 52px
+
   footer
     .half-col
       display: block
